--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
+
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+/* .slick-slide img {
+    margin: auto;
+  } */
+  
