--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,14 @@
 
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
-/* .slick-slide img {
-    margin: auto;
-  } */
-  
+
+.App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: lightseagreen;
+  }
